update style and fix navbar toggler visibilty

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,18 @@
 /* Variables */
+/* update the variables, one added for the toggle */
 :root {
-
   --bred: 1px solid red;
   --pink: #9c2f54;
   --dark-pink: #5b1a2f;
   --light-pink: #d0cecf;
   --text-lighter: #9e9e9e;
   --icon-primary: #9c2f54;
+  --navbar-toggle: #6b112f;
   --icon-hover: #016673;
   --link-item: #da3169;
   --link-hover: #03a3b8;
   --link-focus: #058798;
-
+  --svg: rgba(149, 3, 147, 0.8);
 }
 
 
@@ -82,6 +83,21 @@
 
 .nav-link:focus {
   color: var(--link-focus);
+}
+
+/* Add styles for the toggle button */
+/* Change the color in the stroke property of the image data */
+.custom-toggler .navbar-toggler-icon{
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+  /* Set the border color to the desired color */
+.custom-toggler.navbar-toggler {
+  border-color: var(--navbar-toggle);
+}
+
+.navbar-toggler:focus {
+  box-shadow: 0 0 0 0.1rem rgba(110, 35, 35, 0.865);
 }
 
 
